# mols2grid_to_image

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  example_usage.py  pyproject.toml
.github/workflows/: lint.yml  publish.yml  release.yml  test.yml
example/: example_config.json
plans/: compiled-painting-cookie.md
src/m2g_image/: __init__.py  app.py  config.py  converter.py  screenshot.py
tests/: conftest.py  test_app.py  test_config.py  test_converter.py  test_screenshot.py
tests/data/: test.csv
tests/output/: test_screenshot.html
